--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "log4j": "^1.0.0",
     "pg": "^8.7.1",
     "yarn": "^1.22.17"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2"
   }
 }
